# Cereal

./: CMakeLists.txt  conanfile.py  main.cpp
BoxModel/: BoxInfo.h  BoxListModel.cpp  BoxListModel.h  CMakeLists.txt
BoxModel/serialize/: BoxInfo_s.cpp  BoxInfo_s.h  BoxListModel_s.cpp  BoxListModel_s.h  util.h
StorageImpl/: BoxStorage.cpp  BoxStorage.h  CMakeLists.txt
UI/: BoxGenerator.qml  CMakeLists.txt  main.qml
Utils/: CMakeLists.txt  serializeDeclare.h
cmake/: ConanIntegrateConfig.cmake
